Resolved compiler warnings