@@ -2,9 +2,13 @@ package com.kavya.hrms.controller;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
+
+import java.time.Instant;
+import org.springframework.http.ResponseEntity;
 
 import com.kavya.hrms.dto.LoginRequest;
 import com.kavya.hrms.dto.LoginResponse;
@@ -12,35 +16,21 @@ import com.kavya.hrms.dto.PasswordResetConfirmationRequest;
 import com.kavya.hrms.dto.PasswordResetRequest;
 import com.kavya.hrms.dto.PasswordResetResponse;
 import com.kavya.hrms.model.AppUser;
-import com.kavya.hrms.model.AuthSession;
 import com.kavya.hrms.repository.AppUserRepository;
-import com.kavya.hrms.repository.AuthSessionRepository;
 import com.kavya.hrms.service.PasswordResetEmailService;
-import java.time.Instant;
-import java.util.List;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.stubbing.Answer;
-import org.springframework.http.ResponseEntity;
 
-@ExtendWith(MockitoExtension.class)
+@org.junit.jupiter.api.extension.ExtendWith(org.mockito.junit.jupiter.MockitoExtension.class)
 class AuthControllerTest {
-    @Mock
+    @org.mockito.Mock
     private AppUserRepository appUserRepository;
 
-    @Mock
-    private AuthSessionRepository authSessionRepository;
-
-    @Mock
+    @org.mockito.Mock
     private PasswordResetEmailService passwordResetEmailService;
 
-    @InjectMocks
+    @org.mockito.InjectMocks
     private AuthController authController;
 
-    @Test
+    @org.junit.jupiter.api.Test
     void loginShouldAcceptPlainPasswordAndReturnSuccess() {
         AppUser user = new AppUser();
         user.setEmail("Admin@Example.com");
@@ -51,12 +41,8 @@ class AuthControllerTest {
         user.setUserId("USR-ADMIN-001");
         user.setStatus("Active");
 
-        when(appUserRepository.findAllByEmailIgnoreCase("admin@example.com")).thenReturn(List.of(user));
-        Answer<AppUser> saveUserAnswer = invocation -> (AppUser) invocation.getArguments()[0];
-        Answer<AuthSession> saveSessionAnswer = invocation -> (AuthSession) invocation.getArguments()[0];
-        when(appUserRepository.save(any(AppUser.class))).thenAnswer(saveUserAnswer);
-        when(authSessionRepository.save(any(AuthSession.class))).thenAnswer(saveSessionAnswer);
-
+        when(appUserRepository.findAllByEmailIgnoreCase("admin@example.com"))
+            .thenReturn(java.util.Collections.singletonList(user));
         LoginRequest request = new LoginRequest();
         request.setEmail("Admin@Example.com");
         request.setPassword("admin123");
@@ -64,19 +50,13 @@ class AuthControllerTest {
         ResponseEntity<LoginResponse> response = authController.login(request);
         assertNotNull(response, "Response should not be null");
 
-        LoginResponse loginResponse = response.getBody();
-        if (loginResponse == null) {
-            throw new AssertionError("Response body should not be null");
-        }
-
         assertEquals(200, response.getStatusCode().value());
-        LoginResponse body = response.getBody();
-        assertNotNull(body);
+        LoginResponse body = java.util.Objects.requireNonNull(response.getBody(), "Response body should not be null");
         assertTrue(body.isOk());
         assertEquals("Super Admin", body.getRole());
     }
 
-    @Test
+    @org.junit.jupiter.api.Test
     void forgotPasswordShouldSendEmailAndNotExposeTokenWhenMailIsConfigured() {
         AppUser user = new AppUser();
         user.setEmail("employee@example.com");
@@ -87,8 +67,8 @@ class AuthControllerTest {
         user.setUserId("USR-KV001");
         user.setStatus("Active");
 
-        when(appUserRepository.findAllByEmailIgnoreCase("employee@example.com")).thenReturn(List.of(user));
-        when(appUserRepository.save(any(AppUser.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(appUserRepository.findAllByEmailIgnoreCase("employee@example.com"))
+            .thenReturn(java.util.Collections.singletonList(user));
         when(passwordResetEmailService.sendResetCode(any(AppUser.class), any(String.class), any(String.class)))
             .thenReturn(PasswordResetEmailService.DeliveryResult.sent());
 
@@ -96,15 +76,16 @@ class AuthControllerTest {
         request.setEmail("employee@example.com");
 
         ResponseEntity<PasswordResetResponse> response = authController.forgotPassword(request);
+        PasswordResetResponse body = java.util.Objects.requireNonNull(response.getBody(), "Response body should not be null");
 
         assertEquals(200, response.getStatusCode().value());
-        assertTrue(response.getBody() != null && response.getBody().isOk());
-        assertTrue(response.getBody().isEmailSent());
-        assertEquals("", response.getBody().getResetToken());
-        assertNotNull(response.getBody().getExpiresAt());
+        assertTrue(body.isOk());
+        assertTrue(body.isEmailSent());
+        assertEquals("", body.getResetToken());
+        assertNotNull(body.getExpiresAt());
     }
 
-    @Test
+    @org.junit.jupiter.api.Test
     void forgotPasswordShouldExposeTokenOnlyWhenMailIsNotConfigured() {
         AppUser user = new AppUser();
         user.setEmail("employee@example.com");
@@ -115,8 +96,8 @@ class AuthControllerTest {
         user.setUserId("USR-KV001");
         user.setStatus("Active");
 
-        when(appUserRepository.findAllByEmailIgnoreCase("employee@example.com")).thenReturn(List.of(user));
-        when(appUserRepository.save(any(AppUser.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(appUserRepository.findAllByEmailIgnoreCase("employee@example.com"))
+            .thenReturn(java.util.Collections.singletonList(user));
         when(passwordResetEmailService.sendResetCode(any(AppUser.class), any(String.class), any(String.class)))
             .thenReturn(PasswordResetEmailService.DeliveryResult.notConfigured());
 
@@ -124,15 +105,16 @@ class AuthControllerTest {
         request.setEmail("employee@example.com");
 
         ResponseEntity<PasswordResetResponse> response = authController.forgotPassword(request);
+        PasswordResetResponse body = java.util.Objects.requireNonNull(response.getBody(), "Response body should not be null");
 
         assertEquals(200, response.getStatusCode().value());
-        assertTrue(response.getBody() != null && response.getBody().isOk());
-        assertTrue(!response.getBody().isEmailSent());
-        assertNotNull(response.getBody().getResetToken());
-        assertEquals(6, response.getBody().getResetToken().length());
+        assertTrue(body.isOk());
+        assertTrue(!body.isEmailSent());
+        assertNotNull(body.getResetToken());
+        assertEquals(6, body.getResetToken().length());
     }
 
-    @Test
+    @org.junit.jupiter.api.Test
     void resetPasswordShouldUpdateStoredPassword() {
         AppUser user = new AppUser();
         user.setEmail("employee@example.com");
@@ -146,8 +128,8 @@ class AuthControllerTest {
         user.setPasswordResetToken("123456");
         user.setPasswordResetTokenExpiresAt(Instant.now().plusSeconds(600).toString());
 
-        when(appUserRepository.findAllByEmailIgnoreCase("employee@example.com")).thenReturn(List.of(user));
-        when(appUserRepository.save(any(AppUser.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(appUserRepository.findAllByEmailIgnoreCase("employee@example.com"))
+            .thenReturn(java.util.Collections.singletonList(user));
 
         PasswordResetConfirmationRequest request = new PasswordResetConfirmationRequest();
         request.setEmail("employee@example.com");
@@ -155,12 +137,13 @@ class AuthControllerTest {
         request.setNewPassword("newPass123");
 
         ResponseEntity<PasswordResetResponse> response = authController.resetPassword(request);
+        PasswordResetResponse body = java.util.Objects.requireNonNull(response.getBody(), "Response body should not be null");
 
         assertEquals(200, response.getStatusCode().value());
-        assertTrue(response.getBody() != null && response.getBody().isOk());
+        assertTrue(body.isOk());
         assertEquals("newPass123", user.getPassword());
         assertTrue(user.getPasswordHash() != null && !user.getPasswordHash().isBlank());
-        assertEquals(null, user.getPasswordResetToken());
-        assertEquals(null, user.getPasswordResetTokenExpiresAt());
+        assertNull(user.getPasswordResetToken());
+        assertNull(user.getPasswordResetTokenExpiresAt());
     }
 }
